[gd_scene load_steps=14 format=3 uid="uid://bw6m5bgds7m7v"]

[ext_resource type="Script" uid="uid://js1phv5e52wc" path="res://scripts/chapter/chapter.gd" id="1_8nkva"]
[ext_resource type="Texture2D" uid="uid://qdpj3s24b553" path="res://assets/story_bg/chapter1-default-bg.png" id="2_ml76j"]
[ext_resource type="Texture2D" uid="uid://bm68hstmiuykl" path="res://assets/images/chapter-container.png" id="3_0nsp3"]
[ext_resource type="Texture2D" uid="uid://cboevju324t5e" path="res://assets/images/buttons.png" id="4_yrebh"]
[ext_resource type="Theme" uid="uid://cb3r3oyw7hxa0" path="res://theme/label_theme.tres" id="5_cbj0v"]
[ext_resource type="FontFile" uid="uid://b44m80u2kmjq8" path="res://assets/fonts/EFCO Brookshire Regular.ttf" id="6_stg4m"]
[ext_resource type="FontFile" uid="uid://b24fmqblkxkns" path="res://assets/fonts/Fredoka_SemiExpanded-Bold.ttf" id="7_lrl43"]
[ext_resource type="Texture2D" uid="uid://xb64ppa4s1f5" path="res://assets/images/magpatuloy_button.png" id="8_xuks4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g8rx1"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 4
border_color = Color(0.176471, 0.192157, 0.184314, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyyfe"]
atlas = ExtResource("4_yrebh")
region = Rect2(528, 461, 180, 176)
margin = Rect2(0, 0, 10, 10)

[sub_resource type="Animation" id="Animation_yrebh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/TextureRect:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 450)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/TextureRect/MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer/TextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0nsp3"]
resource_name = "pop_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/TextureRect:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.533333, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 450), Vector2(600, 550)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/TextureRect/MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.766667, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer/TextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.666667, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cbj0v"]
_data = {
&"RESET": SubResource("Animation_yrebh"),
&"pop_up": SubResource("Animation_0nsp3")
}

[node name="Chapter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8nkva")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ml76j")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 450)
layout_mode = 2
texture = ExtResource("3_0nsp3")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/TextureRect"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/TextureRect/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ChapterNumber" type="Label" parent="CenterContainer/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("5_cbj0v")
theme_override_colors/font_color = Color(0.176471, 0.192157, 0.184314, 1)
theme_override_fonts/font = ExtResource("6_stg4m")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_g8rx1")
text = "Kabanata 64:"
horizontal_alignment = 1

[node name="ChapterTitle" type="Label" parent="CenterContainer/TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_cbj0v")
theme_override_colors/font_color = Color(0.176471, 0.192157, 0.184314, 1)
theme_override_fonts/font = ExtResource("7_lrl43")
theme_override_font_sizes/font_size = 40
text = "Ang Piging"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ContinueButton" type="TextureButton" parent="CenterContainer/TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_xuks4")
texture_pressed = ExtResource("8_xuks4")
texture_hover = ExtResource("8_xuks4")
texture_disabled = ExtResource("8_xuks4")
texture_focused = ExtResource("8_xuks4")
ignore_texture_size = true
stretch_mode = 0

[node name="CloseButton" type="TextureButton" parent="CenterContainer/TextureRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_bottom = 87.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_gyyfe")
texture_pressed = SubResource("AtlasTexture_gyyfe")
ignore_texture_size = true
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cbj0v")
}

[connection signal="button_down" from="CenterContainer/TextureRect/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_button_down"]
[connection signal="button_down" from="CenterContainer/TextureRect/CloseButton" to="." method="_on_close_button_button_down"]
